integro mas css

--- a/about.html
+++ b/about.html
@@ -4,8 +4,41 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="../css/about.css">
 </head>
 <body>
+    <header>
+        <h1>Sobre Pablo Rodríguez</h1>
+        <p>Información personal y académica</p>
+    </header>
+   <section> 
+    <h2>Información Personal</h2> 
+    <p><strong>Nombre:</strong> Pablo Rodríguez Viader</p> 
+    <p><strong>Edad:</strong> 19 años</p> 
+    <p><strong>Ciudad:</strong> Madrid, España</p> 
+    <img  src="../img/foto_caricatura.png" alt="Foto de Pablo Rodríguez" width="200">
+    </section>
+
     
+
+    <section>
+        <h2>Formación Académica</h2>
+        <p>Actualmente estoy cursando el Grado en Ingeniería Informática en la Universidad Francisco de Vitoria (UFV) en Madrid.</p>
+    </section>
+    <section>
+        <h2>Intereses y Hobbies</h2>
+        <p>En mi tiempo libre disfruto de actividades como:</p>
+        <ul>
+            <li>Pasar tiempo con amigos y familiares</li>
+            <li>Deporte, especialmente el fútbol y el atletismo</li>
+            <li>Jugar videojuegos como el Counter Strike</li>
+            <li>Viajar a paises con culturas diferentes</li>
+        </ul>
+    </section>
+    <footer>
+        <p>&copy; 2025 - Sobre Pablo Rodríguez</p>
+    </footer>
+
+
 </body>
 </html>
