--- a/contact.html
+++ b/contact.html
@@ -1,11 +1,50 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Contacto</title>
+    <link rel="stylesheet" href="../css/contact.css">
 </head>
 <body>
-    
+
+
+<header>
+    <h1>Contacto</h1>
+    <p>Ponte en contacto o deja tus sugerencias</p>
+</header>
+
+
+<section>
+    <h2>Información de contacto</h2>
+    <p><strong>Nombre:</strong> Pablo Rodríguez Viader</p>
+    <p><strong>Correo electrónico:</strong> 9500682@alumnos.ufv.es</p>
+</section>
+
+
+<section>
+    <h2>Sugerencias de mejora</h2>
+    <form>
+        <label for="nombre">Nombre</label>
+        <input type="text" id="nombre" name="nombre" placeholder="Tu nombre">
+
+
+        <label for="email">Correo electrónico</label>
+        <input type="email" id="email" name="email" placeholder="Tu correo electrónico">
+
+
+        <label for="mensaje">Sugerencia</label>
+        <textarea id="mensaje" name="mensaje" rows="5" placeholder="Escribe aquí tu sugerencia de mejora"></textarea>
+
+
+        <button type="submit">Enviar sugerencia</button>
+    </form>
+</section>
+
+
+<footer>
+    <p>&copy; 2025 - Página de Contacto</p>
+</footer>
+
+
 </body>
 </html>
