Desarrollo del resto de las web y de los css

--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
         <h2>Formación Académica</h2>
         <p>Actualmente estoy cursando el Grado en Ingeniería Informática en la Universidad Francisco de Vitoria (UFV) en Madrid.</p>
     </section>
-    <section>
+    <section id="section1">
         <h2>Intereses y Hobbies</h2>
         <p>En mi tiempo libre disfruto de actividades como:</p>
         <ul>
