--- a/degree.html
+++ b/degree.html
@@ -1,11 +1,70 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Grado en Ingeniería Informática - UFV</title>
+    <link rel="stylesheet" href="../css/degree.css">
 </head>
 <body>
-    
+
+
+<header>
+    <h1>Grado en Ingeniería Informática</h1>
+    <p>Universidad Francisco de Vitoria (UFV) — Madrid</p>
+</header>
+
+
+<section>
+    <h2>¿Qué es este grado?</h2>
+    <p>El Grado en Ingeniería Informática es una titulación universitaria que forma profesionales en el ámbito de la tecnología y la informática, enseñándoles a diseñar, desarrollar y gestionar soluciones tecnológicas en diversos sectores.</p>
+    <p>En la UFV, este grado prepara al estudiante desde los fundamentos hasta temas avanzados de software y sistemas. :contentReference[oaicite:0]{index=0}</p>
+</section>
+
+
+<section>
+    <h2>Duración y organización</h2>
+    <p>El grado tiene una duración de <strong>cuatro años</strong>, divididos en ocho semestres académicos, con un plan de estudios diseñado para cubrir todos los aspectos esenciales de la ingeniería informática.</p>
+</section>
+<section>
+    <h2>Plan de estudios</h2>
+    <p>Aunque el plan completo incluye muchas materias, en general está organizado desde los fundamentos básicos como programación y matemáticas hasta asignaturas avanzadas como:</p>
+    <ul>
+        <li>Programación y Estructuras de Datos</li>
+        <li>Sistemas Operativos y Redes</li>
+        <li>Inteligencia Artificial y Ciberseguridad</li>
+        <li>Desarrollo de Aplicaciones Web y Móviles</li>
+    </ul>
+    <p>Estas materias buscan formar profesionales versátiles y capaces de afrontar retos en el sector tecnológico. :contentReference[oaicite:2]{index=2}</p>
+</section>
+
+
+<section>
+    <h2>Salidas profesionales</h2>
+    <p>Graduarte en Ingeniería Informática te abre muchas puertas en el mercado laboral tecnológico. Algunas salidas posibles son:</p>
+    <ul>
+        <li>Desarrollador de software</li>
+        <li>Especialista en ciberseguridad</li>
+        <li>Analista de datos</li>
+        <li>Consultor tecnológico</li>
+        <li>Gestor de proyectos informáticos</li>
+        <li>Emprendedor tecnológico</li>
+    </ul>
+    <p>La demanda de profesionales informáticos es alta, y los graduados tienen una tasa de empleo elevada en múltiples sectores. :contentReference[oaicite:3]{index=3}</p>
+</section>
+
+
+<section>
+    <h2>Acceso y requisitos</h2>
+    <p>Para acceder al grado debes cumplir los requisitos de admisión establecidos por la UFV, que incluyen nota de acceso a la universidad y, en algunos casos, pruebas o entrevistas del proceso de admisión. :contentReference[oaicite:4]{index=4}</p>
+</section>
+
+
+<footer>
+    <p>&copy; 2025 - Grado en Ingeniería Informática (UFV)</p>
+</footer>
+
+
 </body>
 </html>
+
+
