--- a/topic.html
+++ b/topic.html
@@ -1,11 +1,60 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Club Atlético de Madrid</title>
+    <link rel="stylesheet" href="../css/topic.css">
 </head>
 <body>
-    
+
+
+<header>
+    <h1>Club Atlético de Madrid</h1>
+    <p>Uno de los clubes más importantes del fútbol español</p>
+   
+</header>
+<section>
+    <h2>Introducción</h2>
+    <p>Llevo siendo fanático del Atlético de Madrid desde que era pequeño, consiguiendo haber ido al Vicente Calderón cuando era pequeño y al Metropolitano.</p>
+</section>
+<section>
+    <h2>Historia</h2>
+    <p>El Club Atlético de Madrid fue fundado el 26 de abril de 1903. A lo largo de su historia, el club se ha consolidado como uno de los grandes equipos del fútbol español y europeo.</p>
+    <p>Sus colores tradicionales son el rojo y blanco, lo que le ha valido el apodo de "Los Colchoneros".</p>
+</section>
+
+
+<section>
+    <h2>Estadio</h2>
+    <img src="../img/atleti_estadio.jpg" alt="Estadio Cívitas Metropolitano" class="img-section">
+    <p>El Atlético de Madrid juega sus partidos como local en el estadio Cívitas Metropolitano, inaugurado en 2017.</p>
+    <p>Es uno de los estadios más modernos de Europa y tiene una capacidad aproximada de 70.000 espectadores.</p>
+</section>
+
+
+<section>
+    <h2>Palmarés</h2>
+    <ul>
+        <li>Ligas españolas</li>
+        <li>Copas del Rey</li>
+        <li>Supercopas de España</li>
+        <li>UEFA Europa League</li>
+        <li>Supercopas de Europa</li>
+    </ul>
+</section>
+
+
+<section>
+    <h2>Actualidad</h2>
+    <img src="../img/simeone.jpg" alt="Diego Pablo Simeone" class="img-section">
+    <p>En los últimos años, el club ha sido dirigido por Diego Pablo Simeone, quien ha conseguido importantes títulos y ha devuelto al Atlético de Madrid a la élite del fútbol mundial.</p>
+</section>
+
+
+<footer>
+    <p>&copy; 2025 - Página informativa sobre el Club Atlético de Madrid</p>
+</footer>
+
+
 </body>
 </html>
