--- a/net.html
+++ b/net.html
@@ -1,11 +1,34 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Páginas de compañeros</title>
+    <link rel="stylesheet" href="../css/net.css">
 </head>
-<body>
-    
+<body class="body">
+
+
+<header class="header">
+    <h1>Páginas web de otros compañeros</h1>
+</header>
+
+
+<section    class="section">
+    <p>Aquí puedes encontrar enlaces a las páginas web de otros compañeros:</p>
+    <ul>
+        <li><a href="https://martin-jaimes-zambrano.github.io/Web_Martin_Jaimes/" target="_blank">Página de Martin Jaimes</a></li>
+        <li><a href="https://miguel-reyes-gomez.github.io/trabajo-individual-fii-miguelreyes/" target="_blank">Página de Miguel Reyes</a></li>
+        <li><a href="https://pablo-garcia-blanco.github.io/Web_Pablo_Garcia_Blanco/docs/index.html" target="_blank">Página de Pablo García</a></li>
+        <li><a href="https://pablo-deabajo-plans.github.io/trabajo_individual_web/" target="_blank">Página de Pablo de Abajo</a></li>
+    </ul>
+</section>
+
+
+<footer class="footer">
+    <p>&copy; 2025 - Mi Página Web</p>
+</footer>
+
+
 </body>
 </html>
