--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="../css/about.css">
+    <link rel="stylesheet" href="css/about.css">
 </head>
 <body>
     <header>
@@ -16,7 +16,7 @@
     <p><strong>Nombre:</strong> Pablo Rodríguez Viader</p> 
     <p><strong>Edad:</strong> 19 años</p> 
     <p><strong>Ciudad:</strong> Madrid, España</p> 
-    <img  src="../img/foto_caricatura.png" alt="Foto de Pablo Rodríguez" width="200">
+    <img  src="img/foto_caricatura.png" alt="Foto de Pablo Rodríguez" width="200">
     </section>
 
     
