--- a/topic.html
+++ b/topic.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Club Atlético de Madrid</title>
-    <link rel="stylesheet" href="../css/topic.css">
+    <link rel="stylesheet" href="css/topic.css">
 </head>
 <body>
 
@@ -26,7 +26,7 @@
 
 <section>
     <h2>Estadio</h2>
-    <img src="../img/atleti_estadio.jpg" alt="Estadio Cívitas Metropolitano" class="img-section">
+    <img src="img/atleti_estadio.jpg" alt="Estadio Cívitas Metropolitano" class="img-section">
     <p>El Atlético de Madrid juega sus partidos como local en el estadio Cívitas Metropolitano, inaugurado en 2017.</p>
     <p>Es uno de los estadios más modernos de Europa y tiene una capacidad aproximada de 70.000 espectadores.</p>
 </section>
@@ -46,7 +46,7 @@
 
 <section>
     <h2>Actualidad</h2>
-    <img src="../img/simeone.jpg" alt="Diego Pablo Simeone" class="img-section">
+    <img src="img/simeone.jpg" alt="Diego Pablo Simeone" class="img-section">
     <p>En los últimos años, el club ha sido dirigido por Diego Pablo Simeone, quien ha conseguido importantes títulos y ha devuelto al Atlético de Madrid a la élite del fútbol mundial.</p>
 </section>
 
