--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Contacto</title>
-    <link rel="stylesheet" href="../css/contact.css">
+    <link rel="stylesheet" href="css/contact.css">
 </head>
 <body>
 
