union de las hojas css

--- a/degree.html
+++ b/degree.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Grado en Ingeniería Informática - UFV</title>
-    <link rel="stylesheet" href="css/degree.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
 
