--- a/net.html
+++ b/net.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Páginas de compañeros</title>
-    <link rel="stylesheet" href="css/net.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
-<body class="body">
+<body class="body-net">
 
 
 <header class="header">
