--- a/topic.html
+++ b/topic.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Club Atlético de Madrid</title>
-    <link rel="stylesheet" href="css/topic.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
 
 
-<header>
+<header class="header-atleti">
+
     <h1>Club Atlético de Madrid</h1>
     <p>Uno de los clubes más importantes del fútbol español</p>
    
