--- a/contact.html
+++ b/contact.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Contacto</title>
-    <link rel="stylesheet" href="css/contact.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
-<body>
+<body class="body-contact">
+
 
 
 <header>
