--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <header>
@@ -16,13 +16,14 @@
     <p><strong>Nombre:</strong> Pablo Rodríguez Viader</p> 
     <p><strong>Edad:</strong> 19 años</p> 
     <p><strong>Ciudad:</strong> Madrid, España</p> 
-    <img  src="img/foto_caricatura.png" alt="Foto de Pablo Rodríguez" width="200">
+    <img  src="img/Foto_caricatura.png" alt="Foto de Pablo Rodríguez" width="200">
     </section>
 
     
 
     <section>
         <h2>Formación Académica</h2>
+        <img src="img/Logo_UFV.jpg" alt="Logo UFV" width="150">
         <p>Actualmente estoy cursando el Grado en Ingeniería Informática en la Universidad Francisco de Vitoria (UFV) en Madrid.</p>
     </section>
     <section id="section1">
