--- a/degree.html
+++ b/degree.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Grado en Ingeniería Informática - UFV</title>
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
@@ -16,8 +16,9 @@
 
 <section>
     <h2>¿Qué es este grado?</h2>
+    <img src="img/Logo_UFV.jpg" alt="Logo UFV" width="150">
     <p>El Grado en Ingeniería Informática es una titulación universitaria que forma profesionales en el ámbito de la tecnología y la informática, enseñándoles a diseñar, desarrollar y gestionar soluciones tecnológicas en diversos sectores.</p>
-    <p>En la UFV, este grado prepara al estudiante desde los fundamentos hasta temas avanzados de software y sistemas. :contentReference[oaicite:0]{index=0}</p>
+    <p>En la UFV, este grado prepara al estudiante desde los fundamentos hasta temas avanzados de software y sistemas.</p>
 </section>
 
 
@@ -34,7 +35,7 @@
         <li>Inteligencia Artificial y Ciberseguridad</li>
         <li>Desarrollo de Aplicaciones Web y Móviles</li>
     </ul>
-    <p>Estas materias buscan formar profesionales versátiles y capaces de afrontar retos en el sector tecnológico. :contentReference[oaicite:2]{index=2}</p>
+    <p>Estas materias buscan formar profesionales versátiles y capaces de afrontar retos en el sector tecnológico.</p>
 </section>
 
 
@@ -49,13 +50,13 @@
         <li>Gestor de proyectos informáticos</li>
         <li>Emprendedor tecnológico</li>
     </ul>
-    <p>La demanda de profesionales informáticos es alta, y los graduados tienen una tasa de empleo elevada en múltiples sectores. :contentReference[oaicite:3]{index=3}</p>
+    <p>La demanda de profesionales informáticos es alta, y los graduados tienen una tasa de empleo elevada en múltiples sectores.</p>
 </section>
 
 
 <section>
     <h2>Acceso y requisitos</h2>
-    <p>Para acceder al grado debes cumplir los requisitos de admisión establecidos por la UFV, que incluyen nota de acceso a la universidad y, en algunos casos, pruebas o entrevistas del proceso de admisión. :contentReference[oaicite:4]{index=4}</p>
+    <p>Para acceder al grado debes cumplir los requisitos de admisión establecidos por la UFV, que incluyen nota de acceso a la universidad y, en algunos casos, pruebas o entrevistas del proceso de admisión.</p>
 </section>
 
 
