solucion de las rutasç

--- a/degree.html
+++ b/degree.html
@@ -58,7 +58,9 @@
     <h2>Acceso y requisitos</h2>
     <p>Para acceder al grado debes cumplir los requisitos de admisión establecidos por la UFV, que incluyen nota de acceso a la universidad y, en algunos casos, pruebas o entrevistas del proceso de admisión.</p>
 </section>
-
+<section>
+    <p><a href="fii.html">Más información sobre la asignatura Fundamentos de la Ingeniería Informática</a></p>
+</section>
 
 <footer>
     <p>&copy; 2025 - Grado en Ingeniería Informática (UFV)</p>
