--- a/about.html
+++ b/about.html
@@ -26,16 +26,20 @@
         <img src="img/Logo_UFV.jpg" alt="Logo UFV" width="150">
         <p>Actualmente estoy cursando el Grado en Ingeniería Informática en la Universidad Francisco de Vitoria (UFV) en Madrid.</p>
     </section>
-    <section id="section1">
-        <h2>Intereses y Hobbies</h2>
-        <p>En mi tiempo libre disfruto de actividades como:</p>
-        <ul>
-            <li>Pasar tiempo con amigos y familiares</li>
-            <li>Deporte, especialmente el fútbol y el atletismo</li>
-            <li>Jugar videojuegos como el Counter Strike</li>
-            <li>Viajar a paises con culturas diferentes</li>
-        </ul>
-    </section>
+    <section>
+    <h2>Redes Sociales</h2>
+    <p>
+        En mis redes sociales comparto contenido relacionado con mis estudios,
+        intereses personales y algunos proyectos académicos.
+    </p>
+
+    <ul>
+        <li><strong>Instagram:</strong> @pablo.dev</li>
+        <li><strong>X (Twitter):</strong> @pablo_code</li>
+        <li><strong>LinkedIn:</strong> Pablo Rodríguez – Ingeniería Informática</li>
+        <li><strong>GitHub:</strong> PabloRodriguezUFV</li>
+    </ul>
+</section>
     <footer>
         <p>&copy; 2025 - Sobre Pablo Rodríguez</p>
     </footer>
